TEST BOT FATHER

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,23 @@ jobs:
         
       - name: Send Telegram Notification
         run: |
-          curl -X POST "https://api.telegram.org/bot7960361581:AAF5nYh_ETdtdMl_hQAA9v2SRFMvPN2S1dY/sendMessage" \
-            -d chat_id=1243717571 \
-            -d text="🚨 Merge to Main/Master Branch 🚨\nA merge has been made to the main/master branch. Please review the changes!"
+            curl -X POST "https://api.telegram.org/bot7960361581:AAF5nYh_ETdtdMl_hQAA9v2SRFMvPN2S1dY/sendMessage" \
+                -d chat_id=1243717571 \
+                -d text="🚨 Merge to Main/Master Branch 🚨\nA merge has been made to the main/master branch. Please review the changes!"
+            
+            # Membuat keyboard custom
+            curl -X POST "https://api.telegram.org/bot7960361581:AAF5nYh_ETdtdMl_hQAA9v2SRFMvPN2S1dY/sendMessage" \
+              -H "Content-Type: application/json" \
+              -d '{
+                  "chat_id": 1243717571,
+                  "text": "Quick Actions:",
+                  "reply_markup": {
+                      "keyboard": [
+                          ["🔍 Check Status", "📊 View Metrics"],
+                          ["🚀 Deploy", "🔄 Rollback"],
+                          ["📋 Logs", "⚙️ Settings"]
+                      ],
+                      "resize_keyboard": true,
+                "one_time_keyboard": true
+                }
+            }'
